# graphics-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cl_context.h  hello_world.cl  mandelbrot.cl  mandelbrot.cpp  process_array.cl  process_array.cpp
Raytracing.xcodeproj/: project.pbxproj
Raytracing.xcodeproj/project.xcworkspace/xcuserdata/dgavedissian.xcuserdatad/: UserInterfaceState.xcuserstate
Raytracing.xcodeproj/xcshareddata/xcschemes/: Raytracing.xcscheme  RaytracingRelease.xcscheme
Raytracing.xcodeproj/xcuserdata/dgavedissian.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Raytracing.xcodeproj/xcuserdata/dgavedissian.xcuserdatad/xcschemes/: xcschememanagement.plist
cpu_raytracing/: raytracing.cpp
opencl/: cl_context.h  mandelbrot.cpp  numerical_reduction.cpp  process_array.cpp
raytracing/: bvh_tree.h  cpu_renderer.cpp  cpu_renderer.h  hittable.h  main.cpp  material.h  math.cpp  math.h  metal_renderer.h  metal_renderer.mm  metal_renderer_shader.metal  object.h  raytracing.cpp  renderer.h  single_image_window.cpp  single_image_window.h
raytracing/glad/: gl.h
